<resources>
    <string name="app_name">AutoIndex Premium</string>
    <string name="welcome_item_search">Search</string>
    <string name="search_header_title">Search plate owner</string>
    <string name="bookmarks_header_title">Bookmarked plates</string>
    <string name="welcome_item_bookmarks">Bookmarks</string>
    <string name="welcome_item_settings">Settings</string>
    <string name="plate_type_automobile">Automobile (white)</string>
    <string name="plate_type_automobile_brown">Automobile (brown)</string>
    <string name="plate_type_automobile_temporary">Automobile (temporary)
    </string>
    <string name="plate_type_automobile_repair_shop">Automobile (repair shop)
    </string>
    <string name="plate_type_motorcycle">Motorcycle (white)</string>
    <string name="plate_type_motorcycle_yellow">Motorcycle (yellow)</string>
    <string name="plate_type_motorcycle_brown">Motorcycle (brown)</string>
    <string name="plate_type_motorcycle_temporary">Motorcycle (temporary)
    </string>
    <string name="plate_type_motorcycle_repair_shop">Motorcycle (repair shop)
    </string>
    <string name="plate_type_agricultural">Agricultural (green)</string>
    <string name="plate_type_industrial">Industrial (blue)</string>
    <string name="plate_type_moped">Moped (yellow)</string>
    <string name="search_owner_button_text">Search</string>
    <string name="please_wait">Please wait</string>
    <string name="search_in_progress_message">Search in progress</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="captcha_decoding_failed">Captcha error. Check twitter.com/clementapps and try again.</string>
    <string name="captcha_retrieve_dialog_error_title">Error</string>
    <string name="captcha_retrieve_dialog_error_message">Could not retrieve the
        captcha image. Try again.
    </string>
    <string name="plate_owner_not_found_dialog_title">Not found</string>
    <string name="plate_owner_not_found_dialog_message">Unregistered plate or
        hidden owner.
    </string>
    <string name="plate_owner_hidden_dialog_title">Data hidden</string>
    <string name="plate_owner_hidden_dialog_message">The plate owner asked to
        hide his data.
    </string>
    <string name="request_error_try_again">Request error. Check connection and
        try again. Consult twitter.com/clementapps.
    </string>
    <string name="plate_owner_bookmark">Bookmark</string>
    <string name="plate_owner_remove_bookmark">Remove bookmark</string>
    <string name="plate_owner_save_as_contact">Save as contact</string>
    <string name="operation_ok">Operation successful.</string>
    <string name="plate_owner_remove_contact">Remove from contacts</string>
    <string name="plate_owner_see_on_map">See on map</string>
    <string name="plate_owner_share">Share</string>
    <string name="bookmarks_empty_list">No bookmark has been saved yet.</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_advanced">Misc</string>
    <string name="pref_category_about">About</string>
    <string name="pref_license">License</string>
    <string name="pref_feedback">Feedback</string>
    <string name="pref_rate_this_app">Rate this app!</string>
    <string name="pref_search_history_title">Search history</string>
    <string name="pref_clear_history">Clear history</string>
    <string name="pref_search_history_size">Maximum size</string>
    <string name="pref_force_backup_restore_title">Force data restore</string>
    <string name="pref_force_backup_restore_summary">Try this if favorites and
        preferences were not restored after
        re-installing.
    </string>
    <string name="restore_completed_successfully">Data restored successfully.
    </string>
    <string name="restore_failed">Failure! Could not restore data.</string>
    <string name="restore_nothing">All data are up-to-date.</string>
    <string name="invalid_intent_call">Invalid intent data. Report problem to
        the previously opened application
        developer.
    </string>
    <string name="copied_to_clipboard">Plate owner data copied to clipboard.
    </string>
    <string name="do_you_want_to_quit_message">Do you really want to quit?
    </string>
    <string name="pref_name_in_favorites_title">Owner name in bookmarks</string>
    <string name="plate_owner_lookup_in_phone_directory">Lookup in Phone
        directory
    </string>
    <string name="plate_owner_open">Open</string>
    <string name="recent_searches_button_text">Recent searches</string>
    <string name="recent_searches_more">More…</string>
    <string name="history_was_cleared">History cleared successfully.</string>
    <string name="do_you_want_to_clear_history">Do you really want to clear the
        search history?
    </string>
    <string name="do_you_want_to_remove_all_bookmarks">Do you really want to
    remove all bookmarks?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sms_provider_warning_title">Warning</string>
    <string name="sms_provider_warning_text">To request the owner details of
        this plate a SMS needs to be sent to the website of the canton.\n

        A 1.00 Swiss Franc fee will be applied if a result is found, and often
        0.20 CHF is billed if there is none.\n

        Most of these services only work from 06.00 to 22.00.\n

        You may usually only make 5 requests per day for each canton.

        (Any of this information may not be accurate.)
    </string>
    <string name="sms_provider_do_not_show_warning_again">Do not show this
        message again
    </string>
    <string name="sms_provider_i_understand_warning">I understand.</string>
    <string name="sms_provider_send_receive_sending" formatted="false">Sending
        SMS "%s" to %d…
    </string>
    <string name="sms_provider_send_receive_sent">Sent! Waiting for the
        answer…
    </string>
    <string name="sms_provider_send_receive_unknown_response" formatted="false">
        The response was: "%s".\n
        NB: This will not be stored in anyway.
    </string>
    <string name="sms_provider_send_receive_radio_off">Error: No network or
        Airplane mode.
    </string>
    <string name="sms_provider_send_receive_received">Response received. Going
        to next step.
    </string>
    <string name="complicated_ge_text">
        Requests cost 10 francs and you have to tell (in French) why you want to
        know who the owner is.
    </string>
    <string name="complicated_ge_url">http://ge.ch/vehicules/index-autos
    </string>
    <string name="complicated_ge_phone"></string>
    <string name="complicated_ge_email"></string>
    <string name="complicated_bs_text">You can get this information for free by
        sending an e-mail.
    </string>
    <string name="complicated_bs_url"></string>
    <string name="complicated_bs_phone"></string>
    <string name="complicated_bs_email">info.mfkbs@jsd.bs.ch</string>
    <string name="complicated_nw_text">Request by email or phone</string>
    <string name="complicated_nw_url"></string>
    <string name="complicated_nw_phone">+41 (0)41 618 41 41</string>
    <string name="complicated_nw_email">info@vsz.ch</string>
    <string name="complicated_ow_text">Request by email or phone</string>
    <string name="complicated_ow_url"></string>
    <string name="complicated_ow_phone">+41 (0)41 666 66 00</string>
    <string name="complicated_ow_email">info@vsz.ch</string>
    <string name="complicated_sz_text">Request by email or phone</string>
    <string name="complicated_sz_url"></string>
    <string name="complicated_sz_phone">+41 (0)41 819 21 43</string>
    <string name="complicated_sz_email">vasz@sz.ch</string>
    <string name="complicated_ur_text">Request by email or phone</string>
    <string name="complicated_ur_url"></string>
    <string name="complicated_ur_phone">+41 (0)41 875 28 15</string>
    <string name="complicated_ur_email">assv@ur.ch</string>
    <string name="complicated_ne_text">Online for users of SuisseID or by postal
        mail
    </string>
    <string name="complicated_ne_url">
        http://www.scan-ne.ch/route/vehicules/Pages/detenteurs.aspx
    </string>
    <string name="complicated_ne_phone"></string>
    <string name="complicated_ne_email"></string>
    <string name="complicated_vd_text">Only by postal mail. You must provide a
        valid reason to request data
        for this number. Fee: 20 francs.
    </string>
    <string name="complicated_vd_url">
        http://www.vd.ch/themes/mobilite/automobile/plaques-dimmatriculation/
    </string>
    <string name="complicated_vd_phone"></string>
    <string name="complicated_vd_email"></string>
    <string name="complicated_ti_text">Available on the Internet:</string>
    <string name="complicated_ti_url">http://www4.ti.ch/index.php?id=24347
    </string>
    <string name="complicated_ti_phone"></string>
    <string name="complicated_ti_email"></string>
    <string name="complicated_ju_text">The administration should give you this
        information.
        Art 126 OAC.
    </string>
    <string name="complicated_ju_url">http://www.jura.ch/DFJP/OVJ.html</string>
    <string name="complicated_ju_phone">+41 (0)32 420 71 21</string>
    <string name="complicated_ju_email"></string>
    <string name="number_of_requests_exceeded">Number of requests exceeded
    </string>
    <string name="pref_clear_warnings">Clear warnings</string>
    <string name="rate_this_app_title">Rate this app</string>
    <string name="rate_this_app_text">You have been using this app for a while
        now. Please consider rating it.
    </string>
    <string name="rate_this_app_rate_now">Rate now</string>
    <string name="rate_this_app_rate_later">Rate later</string>
    <string name="rate_this_app_already_rated">Already rated</string>
    <string name="speech_say_number">Say the number (advice: one digit at a
        time)
    </string>
    <string name="speech_canton_not_supported">This service in not available in
        canton %s.
    </string>
    <string name="speech_unknown_query">Sorry, your query was not understood.
        Please try again.
    </string>
    <string name="speech_pending_search">I am now searching the number %1$s,
        %2$d in the database.
    </string>
    <string name="speech_hidden_data">Sorry, the owner of the number %1$s, %2$d
        wanted his identity not be revealed.
    </string>
    <string name="speech_not_found">Sorry, there is no information in the
        database about the number %1$s, %2$d.
    </string>
    <string name="speech_silent">Sorry, I heard nothing. Please try again.
    </string>
    <string name="speech_error">Sorry, an error has occured.</string>
    <string name="speech_owner_found">The number %1$s, %2$d belongs to %3$s,
        %4$s, %5$s, %6$d %7$s
    </string>
    <string name="vocal_search_button_text">Say it!</string>
    <string name="too_many_requests_title">Slow down...</string>
    <string name="too_many_requests_message">Too many requests for this canton.
        Try again tomorrow.
    </string>
    <string name="warn_outside_sms_hours">In most cantons the SMS service is
        unavailable between 10 pm and 6 am.
    </string>
    <string name="warn_outside_sms_hours_continue_anyway">Continue anyway
    </string>
    <string name="warn_outside_sms_hours_cancel">Cancel</string>
    <string name="bookmark_context_menu_remove_all">Remove all</string>
    <string name="bookmark_remove_all_confirmation">Do you really want to delete all bookmarks?</string>
    <string name="plate_owner_remarks_hint">My remarks…</string>
    <string name="plate_owner_remarks_saved_toast">Remarks saved.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>