<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="24sp"
            android:text="@string/sms_provider_warning_title"/>

    <ScrollView
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent">

        <TextView
                android:id="@+id/sms_warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/sms_provider_warning_text"/>
    </ScrollView>

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:id="@+id/sms_warning_do_not_show_checkbox"
            android:text="@string/sms_provider_do_not_show_warning_again"/>

    <Button
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sms_warning_i_understand_button"
            android:text="@string/sms_provider_i_understand_warning"/>
</LinearLayout>